--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
-    "require": {
-        "symfony/mailer": "^6.0"
-    }
+  "require": {
+    "symfony/mailer": "^6.0"
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "3.*"
+  }
 }
