--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
   "require": {
-    "symfony/mailer": "^6.0"
+    "symfony/mailer": "^6.0",
+    "ext-mysqli": "*"
   },
   "require-dev": {
+    "roave/security-advisories": "dev-latest"
+    ,
     "squizlabs/php_codesniffer": "3.*"
   }
 }
